Casa 19-10-2015 Guardar los datos de forma local del usuario

--- a/Euskhazi/www/index_autenticacion.html
+++ b/Euskhazi/www/index_autenticacion.html
@@ -22,7 +22,10 @@
 					<a href="" id="authentication_login_button" class="ui-btn ui-btn-inline ui-corner-all"	onclick="login()" >Login</a>
 				</div>
 				<div id="authentication_user_div" class="ui-field-contain ui-hide-label" style="margin:5px 5%;">
-					<ul data-role="listview" id="authentication_users_ul" data-inset="true">
+					<ul data-role="listview" id="authentication_user_ul" data-inset="true">
+						<li><a href="item1.html">Item 1</a></li>
+						<li><a href="item2.html">Item 2</a></li>
+						<li><a href="item3.html">Item 3</a></li>
 					</ul>
 				</div>
 									
