--- a/Euskhazi/platforms/android/assets/www/index.html
+++ b/Euskhazi/platforms/android/assets/www/index.html
@@ -37,23 +37,24 @@
 				<h1 style="margin-left:0;margin-right:0;white-space: nowrap;overflow: visible;">EUSKHAZI</h1>
 			</div>
 			
-			<div>
-				<a href="#" id="prev-0" class="button-link_level" data-transition="turn">A1</a>
+			<div data-role="elegir-nivel">
+				<a href="#" id="a1-button" onClick="loadAtarikoaMenu()" class="button-link_level" data-transition="turn">Atarikoa</a>
+<!-- 				<a href="#" id="a2-button" class="button-link_level" data-transition="turn">A2</a> -->
+<!-- 				<a href="#" id="b1-button" class="button-link_level" data-transition="turn">B1</a> -->
+<!-- 				<a href="#" id="b2-button" class="button-link_level" data-transition="turn">B2</a> -->
+<!-- 				<a href="#" id="c1-button" class="button-link_level" data-transition="turn">C1</a> -->
 			</div>
 			
-			
-			
-			
-			<div data-role="footer" data-position="fixed">
-				<div class="ui-grid-b" style="width:80%; text-align:center; font-weight:normal;">
-					<div class="ui-block-a">RESULTS: </div>
-					<div class="ui-block-b res-1" id="res-0-1"></div>
-					<div class="ui-block-c res-2" id="res-0-2"></div>
-				</div>
-				<h4>2015-2016 TTA</h4>
-				<a href="#" id="prev-0" class="ui-btn ui-mini ui-corner-all ui-icon-arrow-l ui-btn-icon-left" data-transition="turn">Prev</a>
-				<a href="#page-1" id="next-0" class="ui-btn ui-mini ui-corner-all ui-icon-arrow-r ui-btn-icon-left" data-transition="turn">Next</a>
-			</div>    
+<!-- 			<div data-role="footer" data-position="fixed"> -->
+<!-- 				<div class="ui-grid-b" style="width:80%; text-align:center; font-weight:normal;"> -->
+<!-- 					<div class="ui-block-a">RESULTS: </div> -->
+<!-- 					<div class="ui-block-b res-1" id="res-0-1"></div> -->
+<!-- 					<div class="ui-block-c res-2" id="res-0-2"></div> -->
+<!-- 				</div> -->
+<!-- 				<h4>2015-2016 TTA</h4> -->
+<!-- 				<a href="#" id="prev-0" class="ui-btn ui-mini ui-corner-all ui-icon-arrow-l ui-btn-icon-left" data-transition="turn">Prev</a> -->
+<!-- 				<a href="#page-1" id="next-0" class="ui-btn ui-mini ui-corner-all ui-icon-arrow-r ui-btn-icon-left" data-transition="turn">Next</a> -->
+<!-- 			</div>     -->
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/objects.js"></script>        
