--- a/Euskhazi/www/index.html
+++ b/Euskhazi/www/index.html
@@ -39,7 +39,7 @@
 			
 			<div data-role="elegir-nivel">
 				<a href="#" id="a1-button" onClick="loadAtarikoaMenu()" class="button-link_level" data-transition="turn">Atarikoa</a>
-<!-- 				<a href="#" id="a2-button" class="button-link_level" data-transition="turn">A2</a> -->
+				<a href="#" id="a2-button" onClick="loadSinonimoakMenu()" class="button-link_level" data-transition="turn">Sinonimoak</a>
 <!-- 				<a href="#" id="b1-button" class="button-link_level" data-transition="turn">B1</a> -->
 <!-- 				<a href="#" id="b2-button" class="button-link_level" data-transition="turn">B2</a> -->
 <!-- 				<a href="#" id="c1-button" class="button-link_level" data-transition="turn">C1</a> -->
