Botón para salir de la aplicación

--- a/Euskhazi/www/index.html
+++ b/Euskhazi/www/index.html
@@ -25,6 +25,11 @@
 					<ul data-role="listview" id="authentication_users_ul" data-inset="true">
 					</ul>
 				</div>
+
+				<br><br>
+				<ul data-role="listview">
+					<li><a href="#" class="ui-btn ui-btn-inline ui-corner-all" onclick="salirAplicacion()" >Irten aplikaziotik</a></li>
+				</ul>
 				
 			
 			</div>
