--- a/Euskhazi/www/index.html
+++ b/Euskhazi/www/index.html
@@ -43,11 +43,11 @@
         
         <div data-role="page" data-dialog="true" id="dialogremoveuser">
 			<div data-role="header">
-				<h1>¿Quiéres borrar este usuario?</h1>
+				<h1>Erabiltzaile hau ezabatu nahi duzu?</h1>
 			</div>
 			<div data-role="content">
 				
-				<h3>¿Estas seguro de borrar este usario?</h3>
+				<h3>Ziur zaude erabiltzaile hau ezabatu nahi duzula?</h3>
 				<div data-role="controlgroup" data-type="horizontal">
 					<a name="dialogRemoveUser" id="dialogRemoveUserConfirmar" href="" class="ui-btn ui-corner-all">confirmar</a>
 					<a name="dialogRemoveUser" href="" class="ui-btn ui-corner-all">cancelar</a>
