--- a/Euskhazi/www/index.html
+++ b/Euskhazi/www/index.html
@@ -8,6 +8,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     	<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
+    	<link rel="stylesheet" type="text/css" href="css/estilos.css" />
         <title>Euskhazi autentication</title>
     </head>
     <body>
