index.html traducido completamente

--- a/Euskhazi/www/index.html
+++ b/Euskhazi/www/index.html
@@ -8,18 +8,18 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     	<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
-        <title>Euskhazi autentication</title>
+        <title>Euskhazi autentikazioa</title>
     </head>
     <body>
 		<div data-role="page" id="authentication_page">
 			<div data-role="header" data-position="fixed" >
-				<h1 style="margin-left:0;margin-right:0;white-space: nowrap;overflow: visible;">LOGIN USER</h1>
+				<h1 style="margin-left:0;margin-right:0;white-space: nowrap;overflow: visible;">HASI SAIOA</h1>
 			</div>
 			<div data-role="content">
 				<div id="authentication_login_div" class="ui-field-contain ui-hide-label" style="margin:5px 5%;">
 					<label for="text-1">Login:</label>
 					<input name="text-1" id="authentication_login_input" data-clear-btn="true" value="" type="text" placeholder="Enter your login" />
-					<a href="" id="authentication_login_button" class="ui-btn ui-btn-inline ui-corner-all"	onclick="login()" >Login</a>
+					<a href="" id="authentication_login_button" class="ui-btn ui-btn-inline ui-corner-all"	onclick="login()" >Sartu</a>
 				</div>
 				<div id="authentication_user_div" class="ui-field-contain ui-hide-label" style="margin:5px 5%;">
 					<ul data-role="listview" id="authentication_users_ul" data-inset="true">
@@ -55,8 +55,8 @@
 				
 				<h3>Ziur zaude erabiltzaile hau ezabatu nahi duzula?</h3>
 				<div data-role="controlgroup" data-type="horizontal">
-					<a name="dialogRemoveUser" id="dialogRemoveUserConfirmar" href="" class="ui-btn ui-corner-all">confirmar</a>
-					<a name="dialogRemoveUser" href="" class="ui-btn ui-corner-all">cancelar</a>
+					<a name="dialogRemoveUser" id="dialogRemoveUserConfirmar" href="" class="ui-btn ui-corner-all">Ados</a>
+					<a name="dialogRemoveUser" href="" class="ui-btn ui-corner-all">Utzi</a>
 				</div>
 			</div>
 		</div>
