Un par de correcciones

--- a/Euskhazi/www/index.html
+++ b/Euskhazi/www/index.html
@@ -22,6 +22,7 @@
 					<a href="" id="authentication_login_button" class="ui-btn ui-btn-inline ui-corner-all"	onclick="login()" >Sartu</a>
 				</div>
 				<div id="authentication_user_div" class="ui-field-contain ui-hide-label" style="margin:5px 5%;">
+					<h4 id="lista_usuarios_h4" style="display:none;">Erabiltzaileak:</h4>
 					<ul data-role="listview" id="authentication_users_ul" data-inset="true">
 					</ul>
 				</div>
